Added main to default config.

--- a/config/input.conf
+++ b/config/input.conf
@@ -10,6 +10,12 @@ default_pipeline: {
   enrichers: [
   ]
 }
+
+indra_cfg = {
+  class: estrella.operate.latent.Indra
+  args.server = "tyl"
+}
+
 extended_pipeline: ${default_pipeline} {
   format_reader.args.keep_original_text: false
   enrichers: [
@@ -33,4 +39,11 @@ extended_pipeline: ${default_pipeline} {
       }
     }
   ]
+}
+main = {
+  embedding_comparator = ${indra_cfg}
+  languages = ${known_languages}
+  pipelines = {
+    test_pipeline = ${test_pipeline}
+  }
 }
