moved from submodule to pip install. adapted configs

--- a/estrella/resources/default.conf
+++ b/estrella/resources/default.conf
@@ -1,3 +1,10 @@
+
+known_languages = {
+  German: de
+  English: en
+  French: fr
+}
+
 default_pipeline: {
   source_reader: file.FileReader
 
@@ -11,10 +18,12 @@ default_pipeline: {
   ]
 }
 
-indra_cfg = {
+distributed_service = {
   class: estrella.operate.latent.Indra
-  args.server = "tyl"
+  args.server = "indra.lambda3.org"
 }
+
+graphene_server = "localhost"
 
 extended_pipeline: ${default_pipeline} {
   format_reader.args.keep_original_text: false
@@ -28,22 +37,21 @@ extended_pipeline: ${default_pipeline} {
     }
     {
       class = semantic.GrapheneEnricher
-      args = {
-        do_coreference: false
-      }
+      args.do_coreference: false
+      args.server_address: ${graphene_server}
     }
     {
       class = latent.EmbeddingEnricher
       args = {
-        embedding_provider: ${indra_cfg}
+        embedding_provider: ${distributed_service}
       }
     }
   ]
 }
 main = {
-  embedding_comparator = ${indra_cfg}
+  embedding_comparator = ${distributed_service}
   languages = ${known_languages}
   pipelines = {
-    test_pipeline = ${test_pipeline}
+    extended_pipeline = ${extended_pipeline}
   }
 }
