--- a/estrella/resources/logging.conf
+++ b/estrella/resources/logging.conf
@@ -35,7 +35,7 @@ handlers: {
     stream: "ext://sys.stdout"
   }
   info_file_handler: {
-    class: "logging.handlers.RotatingFileHandler"
+    class: "estrella.util.MakeFileHandler"
     level: "INFO"
     formatter: "simple"
     filename: "logs/info.log"
