Added vectors and a more intuitive visualization.

--- a/estrella/resources/default.conf
+++ b/estrella/resources/default.conf
@@ -19,7 +19,7 @@ default_pipeline: {
 }
 
 distributed_service = {
-  class: estrella.operate.latent.Indra
+  class: estrella.operate.embedding.Indra
   args.server = "indra.lambda3.org"
 }
 
@@ -45,6 +45,10 @@ extended_pipeline: ${default_pipeline} {
       args = {
         embedding_provider: ${distributed_service}
       }
+    }
+    {
+      class = latent.FactEmbeddingEnricher
+      args.embedding_provider = ${distributed_service}
     }
   ]
 }
