--- a/tests/config/testing.conf
+++ b/tests/config/testing.conf
@@ -4,7 +4,7 @@ known_languages = {
 }
 
 indra_cfg = {
-  class: estrella.operate.latent.Indra
+  class: estrella.operate.embedding.Indra
   args.server = "tyl"
 }
 
@@ -35,10 +35,19 @@ test_pipeline = ${default_pipeline} {
   ]
 }
 
+maybespan_pipeline = ${test_pipeline} {
+  enrichers: ${test_pipeline.enrichers} [
+    {
+      class = latent.FactEmbeddingEnricher
+      args.embedding_provider = ${indra_cfg}
+    }
+  ]
+}
+
 main = {
   embedding_comparator = ${indra_cfg}
   languages = ${known_languages}
   pipelines = {
-    test_pipeline = ${test_pipeline}
+    test_pipeline = ${maybespan_pipeline}
   }
 }
